# exp-rust

./: .gitignore
add-foobar/: bacon.toml
all-rspos/: .gitignore  Cargo.toml
alphabet-counts/: Cargo.toml
box-dyn-combination/: Cargo.toml
boxes/: README.md
cajeros-letras/: Cargo.toml
cc_1_2_30_find_tool/: Cargo.toml
change_default_browser/: Cargo.toml
chat-tokio-stream/: Cargo.toml
check-if-it-is-a-symlink/: Cargo.toml
clap-add-testing/: Cargo.toml
clap-maybestdin/: Cargo.toml
clap3-0/: Cargo.toml
clap3-0/src/: main.rs
clap3-0/tests/: cli_tests.rs
clap3-0/tests/cmd/: buggy-case.toml  help.stdout  help.toml
clap4_5_4/: Cargo.toml
clientes/: Cargo.toml
count_of_positives_and_sum_of_negatives/: Cargo.toml
dinf/: Cargo.toml
execute-program/: Cargo.toml
fossil-wood/: Cargo.toml  README.md
get_windows_title/: Cargo.toml
gratis/: Cargo.toml
guilded-rose-refactoring-kata/: Cargo.toml  GildedRoseRequirements.md
iced-sample/: Cargo.toml
invaders/: Cargo.toml
keyflower/: Cargo.toml
leetcode-rs/: Cargo.toml
leptos-sample/: Cargo.toml  index.html
longest-increasing-sequence/: Cargo.toml
lotto-tickets-psychic-model/: Cargo.toml
making_impossible_states_impossible/: Cargo.toml  README.md
match-with-option/: Cargo.toml
maximum-profit-in-job-searching/: Cargo.toml
median-mode/: Cargo.toml
meet-somebody/: Cargo.toml
meet-somebody/src/: main.rs
module_path_macro/: Cargo.toml
one-dust/: Cargo.toml  toolkit.nu
philips-plex/: Cargo.toml  README.md
postgres_with_sqlx/: Cargo.toml
requests_async/: Cargo.toml
requests_blocking/: Cargo.toml
rust-axum-intro/: Cargo.toml
rust-in-action-book/: Cargo.toml
rust_base64/: Cargo.toml  README.md
rusted_keys/: Cargo.toml
rustlings/: .gitignore
send-keys-windows/: Cargo.toml
signal-active-window/: .gitignore  Cargo.toml  sample.env
signal-active-window/src/: main.rs
slint-memory/: Cargo.toml
split-end-colon/: Cargo.toml
stackoverflow-survey/: Cargo.toml
struct_and_impl_practise/: Cargo.toml
tao-sample/: Cargo.toml
tokio-mini-redis/: Cargo.toml
tts-api/: Cargo.toml
voters/: .gitignore  Cargo.toml  schema.sql
vsts/: .gitignore  Cargo.toml  README.md
vsts/src/: main.rs
widget-gallery/: Cargo.toml
(+100 files in other folders)
