[package]
name = "espanso"
authors = ["Federico Terzi <federicoterzi96@gmail.com>"]
version = "2.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "help"] }
log = "0.4.20"
simple_logger = "4.3.3"
trycmd = "0.15.0"


[[bin]]
name = "espanso"
path = "src/main.rs"
